<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>

    <!--Google Place api key -->
    <string name="google_place_api_key" translatable="false">AIzaSyAK366wqKIdy-Td7snXrjIRaI9MkXb2VZE</string>

    <!--Google Maps api key -->
    <string name="google_maps_api_key" translatable="false">"AIzaSyAuoABTy9XWos-Dgtli_OV9ctmhanrmhx0"</string>

    <!--Facebook configuration -->
    <string name="facebook_application_id" translatable="false">239273297312721</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb239273297312721</string>

    <!--Drawer configuration-->
    <string name="navigation_drawer_open">Open drawer </string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="your_restaurant_choice">Your restaurant choice</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>

    <!--Restaurant view holder-->
    <string name="open">Open 24 hours</string>
    <string name="closed">Closed</string>
    <string name="opening_hours_not_available">Opening hours not available</string>
    <string name="open_at">Open at %1$s</string>
    <string name="open_from_until">Open from %1$s until %2$s</string>
    <string name="meters">%1$d meters</string>
    <string name="closing_soon">Closing soon</string>
    <string name="close_tomorrow_at">Close tomorrow at %1$s</string>
    <string name="close_at">Close at %1$s</string>
    <string name="restaurant_opening_hours">restaurant opening hours</string>
    <string name="distance">distance</string>


    <!--Restaurant detail activity-->
    <string name="no_website_available">Restaurant has no website :(</string>
    <string name="no_phone_number_available">Restaurant has no phone number :(</string>
    <string name="you_like_this_restaurant">You like this restaurant</string>
    <string name="you_dislike_this_restaurant">You dislike this restaurant</string>
    <string name="restaurant_photo">restaurant_photo</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="you_eat_at">You eat at %1$s</string>
    <string name="you_canceled">You canceled your choice!</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="website">Website</string>
    <string name="like">Like</string>
    <string name="call">Call</string>


    <!--Map fragment -->
    <string name="ask_for_permission">Go4Lunch needs location permission</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_refused">Permission refused</string>
    <string name="unknown_location">Device location unknown</string>

    <!--WorkMate List Layout-->
    <string name="user_is_eating_at_restaurant_name">User is eating at Restaurant Name</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!--Fragment names -->
    <string name="map_view_title">I\'m hungry</string>
    <string name="restaurant_list_title">I\'m hungry</string>
    <string name="workmates_list_title">Workmates joining</string>

    <!--Sort menu item -->
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_rating">Sort by rating</string>

    <!-- Navigation Header -->
    <string name="user_name">user name</string>
    <string name="user_avatar">user avatar</string>
    <string name="user_mail">user mail</string>

    <!--Connect Activity -->
    <string name="authentification_canceled">Authentification canceled</string>
    <string name="connexion_succeeded">Connexion succeeded</string>
    <string name="no_internet_connexion">No internet connexion</string>
    <string name="unknown_error_has_occurred">Unknown error has occurred</string>
    <string name="connect_activity_background">Connect activity background</string>
    <string name="logo_connect_activity">Logo connect activity</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="find_a_restaurant_and_invite_your_co_workers">Find a restaurant and invite your co-workers!</string>
    <string name="restaurant_sort">restaurant sort</string>
    <string name="restaurant_search">restaurant search</string>

    <!--Base Activity-->
    <string name="search_a_restaurant">Search a restaurant</string>

    <!--Bottom Navigation View -->
    <string name="mapview">MapView</string>
    <string name="listview">ListView</string>
    <string name="workmates">Workmates</string>
    <string name="delete_account_question">Are you sure to delete your account?</string>


    <!--Joining Workmates View Holder-->
    <string name="workmates_is_joining">%1$s is joining!</string>
    <string name="user_has_not_choose_yet">%1$s has not chosen yet</string>
    <string name="is_eating_at_restaurant_name">%1$s is eating at %2$s"</string>

    <!--Restaurant List Fragment-->
    <string name="no_restaurant_around">No restaurant around to sort</string>
    <string name="you_have_not_choose_any_restaurant">You haven\'t choose any restaurant!</string>
    <string name="you_eat_alone">You eat at  %1$s alone!</string>
    <string name="you_eat_at_with">You eat %1$s at with %2$s</string>

    <!-- Notifications-->
    <string name="notification_title">Go4Lunch: your lunch</string>

    <!--Settings Activity-->
    <string name="enable_disable_notifications">Enable/Disable notifications</string>
    <string name="delete_account">Delete account</string>
    <string name="radius_header">Radius Search</string>
    <string name="radius_title">Radius search</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="notification_disabled">Notifications disabled</string>
    <string name="notification_enabled">Notifications enabled</string>



</resources>
