<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/radius_header">

        <ListPreference
            app:defaultValue="500"
            app:entries="@array/radius_entries"
            app:entryValues="@array/radius_values"
            app:key="radius"
            app:title="@string/radius_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/delete_account">
        <Preference
            app:key="delete_account"
            app:title="@string/delete_account"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Notifications"
        >
        <SwitchPreference
            app:key="notification_preferences_key"
            android:title="@string/enable_disable_notifications"
            android:summaryOff="@string/notification_disabled"
            android:summaryOn="@string/notification_enabled"
            android:defaultValue="true"
            />
    </PreferenceCategory>

</PreferenceScreen>
