<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint_layout_connect_activity"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/connect_activity_background"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@drawable/connect_activity_food"
        android:scaleType="centerCrop"
        android:contentDescription="@string/connect_activity_background" />

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_connect_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_meal_24dp"
         />

    <TextView
        android:id="@+id/connect_activity_name_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:shadowColor="#000000"
        android:shadowDx="12"
        android:shadowDy="15"
        android:shadowRadius="1"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app" />

    <TextView
        android:id="@+id/connect_activity_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/find_a_restaurant_and_invite_your_co_workers"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:textStyle="italic|bold"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_activity_name_app" />
</androidx.constraintlayout.widget.ConstraintLayout>