<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/rv_item_restaurant_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/rv_item_restaurant_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/restaurant_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/rv_item_restaurant_distance_from_current_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/rv_item_restaurant_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/restaurant_address"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_item_restaurant_name"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/rv_item_opening_hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/restaurant_opening_hours"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rv_star_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_item_restaurant_address"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/rv_item_restaurant_distance_from_current_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/distance"
        app:layout_constraintEnd_toStartOf="@+id/rv_item_restaurant_photo"
        app:layout_constraintTop_toTopOf="@+id/rv_item_restaurant_name"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/rv_star_2"
        app:layout_constraintEnd_toStartOf="@+id/rv_number_of_workmates_interested"
        app:layout_constraintTop_toBottomOf="@+id/rv_item_restaurant_distance_from_current_position"
        app:srcCompat="@drawable/ic_person_black_24dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/rv_number_of_workmates_interested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/rv_item_restaurant_photo"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:ignore="ContentDescription,HardcodedText" />

    <ImageView
        android:id="@+id/rv_star_1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_item_opening_hours"
        app:layout_constraintEnd_toStartOf="@+id/rv_star_2"
        app:layout_constraintTop_toTopOf="@+id/rv_item_opening_hours"
        app:srcCompat="@drawable/ic_star_yellow_restaurant_grade_24dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/rv_star_2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_star_1"
        app:layout_constraintEnd_toStartOf="@+id/rv_star_3"
        app:layout_constraintTop_toTopOf="@+id/rv_star_1"
        app:srcCompat="@drawable/ic_star_yellow_restaurant_grade_24dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/rv_star_3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_star_2"
        app:layout_constraintEnd_toStartOf="@+id/rv_item_restaurant_photo"
        app:layout_constraintTop_toTopOf="@+id/rv_star_2"
        app:srcCompat="@drawable/ic_star_yellow_restaurant_grade_24dp"
        tools:ignore="ContentDescription" />





</androidx.constraintlayout.widget.ConstraintLayout>